# mentis

./: .gitignore  package-lock.json  package.json  render.yaml  vercel.json
backend/: .env.example  pyproject.toml  render.yaml  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/ai/: __init__.py  context.py  gateway.py  knowledge_graph.py  orchestrator.py  streaming.py
backend/app/ai/ar/: animations.py  instructions.py  renderer.py
backend/app/ai/memory/: history.py  progress.py  student.py
backend/app/ai/scene_graph/: __init__.py  builder.py  concept_graph.py  graph.py  integration.py  reasoner.py  relationships.py  schemas.py  student_attempt.py  validator.py
backend/app/ai/speech/: ssml.py  tts.py
backend/app/ai/teacher/: brain.py  coach.py  critic.py  dialogue.py  emotion.py  homework.py  personality.py  planner.py  prompts.py  quiz.py  reasoner.py  recommendation.py  responder.py  (+3 more)
backend/app/api/: __init__.py
backend/app/core/: config.py  constants.py  database.py  events.py  exceptions.py  logger.py  middleware.py  security.py
backend/app/database/: __init__.py
backend/app/models/: __init__.py
backend/app/repositories/: __init__.py  base.py
backend/app/routers/: auth.py  streaming.py  tutor.py
backend/app/services/: __init__.py  groq_client.py  tutor.py  vision.py
backend/app/use_cases/: __init__.py  base.py  solve_doubt.py  teach_topic.py
backend/app/utils/: __init__.py  json_utils.py
backend/tests/: test_ai_gateway.py  test_scene_graph.py  test_vision_intelligence.py
backend/tests/api/: test_v1_tutor.py
(+103 files in other folders)
