[project]
name = "mentis-backend"
version = "0.1.0"
description = "Mentis AI Tutor Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "redis>=5.2.0",
    "groq>=0.12.0",
]

[project.scripts]
mentis = "app.main:start"
